.metadata/.plugins/org.eclipse.cdt.ui/TestBlink2.build.log
14:53:38 **** Incremental Build of configuration Debug for project TestBlink2 ****
make -r all 
Building file: ../src/TestBlink2.c
Invoking: MCU C Compiler
arm-none-eabi-gcc -DDEBUG -D__CODE_RED -DCORE_M3 -D__USE_LPCOPEN -DNO_BOARD_LIB -D__LPC15XX__ -D__REDLIB__ -I"C:\Users\Eric\Documents\LPCXpresso\SEM-bldcControl\lpc_chip_15xx\inc" -O0 -fno-common -g3 -Wall -c -fmessage-length=0 -fno-builtin -ffunction-sections -fdata-sections -mcpu=cortex-m3 -mthumb -specs=redlib.specs -MMD -MP -MF"src/TestBlink2.d" -MT"src/TestBlink2.o" -MT"src/TestBlink2.d" -o "src/TestBlink2.o" "../src/TestBlink2.c"
../src/TestBlink2.c: In function 'main':
../src/TestBlink2.c:60:2: error: 'sysTickRate' undeclared (first use in this function)
  sysTickRate = Chip_Clock_GetSysTickClockRate();
  ^
../src/TestBlink2.c:60:2: note: each undeclared identifier is reported only once for each function it appears in
make: *** [src/TestBlink2.o] Error 1

14:53:38 Build Finished (took 630ms)

